--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^10.0.5",
     "rsuite": "^5.64.1",
